# NithinLang

./: Manifest.in  README.md  game.nl  gitignore.txt  hello.nl  nithin_startup.txt  pyproject.toml  sales.csv  setup.py
NithinLang-Extension/: package.json
NithinLang-Extension/syntaxes/: nithinlang.tmLanguage.json
src/nithinlang/: __init__.py  ai_engine.py  cli.py  compiler.py  core_lib.py  game_engine.py  ml_ds_engine.py  n_loader.py  parser.py
src/nithinlang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nithinlang/dicts/: __init__.py  hindi.json  telugu.json
src/nithinlang/examples/: ai_demo.nl  hello_hindi.nl  hello_telugu.nl  ml_demo.nl  test_out.txt
