[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nithinlang"
version = "1.5.0"
authors = [
  { name="Veera Nithin", email="nithinlang@opensource.dev" },
]
description = "NithinLang V1.5: Zero-Cloud, Multi-Lingual, LLVM-Powered Programming Language."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "llvmlite>=0.41.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "pygame-ce>=2.5.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "llama-cpp-python>=0.2.0"
]

[project.scripts]
nithin = "nithinlang.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nithinlang = ["dicts/*.json"]